# PnP-Flow

./: .gitignore  README.md  degradations.py  download.sh  main.py  prox_expe.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: main.yml
Dirichet/: Diri_DFlow.ipynb  Diri_PnP.ipynb
ImageGeneration/: losses.py  sampling.py  sde_lib.py  utils.py
ImageGeneration/configs/rectified_flow/: afhq_cat_pytorch_rf_gaussian.py  celeba_hq_pytorch_rf_gaussian.py
ImageGeneration/models/: up_or_down_sampling.py  utils.py
config/: main_config.yaml
config/dataset_config/: afhq_cat.yaml  celeba.yaml
config/method_config/: approx_pgd.yaml  d_flow.yaml  fig.yaml  flow_priors.yaml  generic_mmse_average.yaml  map_estimation.yaml  mmse_average.yaml  oc_flow.yaml  ot_ode.yaml  pnp_diff.yaml  pnp_flow.yaml  pnp_flow_grad.yaml  pnp_gs.yaml  sampling_pnp_flow.yaml
demo/: demo.ipynb
demo/dirichlet/: Diri_DFlow.ipynb  Diri_PnP.ipynb
pnpflow/: compute_metric.py  convergence_score.py  dataloaders.py  degradations.py  display_latent.py  fid_score.py  inexact_gd.py  pnp_minimization.py  toy_example.py  train_denoiser.py  train_flow_matching.py  utils.py
pnpflow/image_generation/: datasets.py  evaluation.py  losses.py  run_lib_pytorch.py  sampling.py  sde_lib.py
pnpflow/image_generation/configs/rectified_flow/: afhq_cat_pytorch_rf_gaussian.py  (+1 more)
pnpflow/image_generation/models/: up_or_down_sampling.py  utils.py
pnpflow/methods/: approx_pgd.py  d_flow.py  direct_grad.py  fig.py  flow_priors.py  generic_mmse_average.py  map_estimation.py  mmse_average.py  oc_flow.py  ot_ode.py  pnp_diff.py  pnp_flow.py  pnp_flow_grad.py  pnp_gs.py  sampling_pnp_flow.py
pnpflow/tests/: test_unit.py
scripts/: afhq_validation_images.sh  denoising_benchmark.sh  generic_benchmark.sh  generic_mmse_average_hyperparam_grid_search.sh  map_estimation_benchmark.sh  pnp_flow_benchmark_interpolation_mode.sh  pnp_flow_benchmark_variants.sh  pnp_flow_grad_benchmark.sh  pnp_flow_interpolation_mode.sh  pnp_flow_sub_iter.sh  pnp_flow_sub_iter_lr_scale.sh  pnp_flow_sub_iter_sr_benchmark.sh  script_compute_time.sh  script_laplace.sh  script_laplace_val.sh  script_test.sh  script_test_afhq.sh  script_test_afhq_copy.sh  script_test_copy.sh  script_train.sh  script_val.sh  script_val_afhq.sh
splits/afhq_cat/: validation_images.txt
src/: compute_metric.py  dataloaders.py  fid_score.py  models.py  train_denoiser.py  train_flow_matching.py
src/methods/: d_flow.py  flow_priors.py  ot_ode.py  pnp_diff.py  pnp_flow.py  pnp_gs.py
