[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pnpflow"
description = "TODO"
authors = [
    {name="Anne Gagneux", email="anne.gagneux@ens-lyon.fr"},
    ]
license = {text = "BSD (3-Clause)"}
dependencies = [
    "torch",
    "scikit-image",
    "pytorch-ignite",
    "cv2",
    "torchvision",
]
dynamic = ["version"]



[tool.setuptools.dynamic]
version = {attr = "pnpflow.__version__"}


[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pnpflow"] 


[project.optional-dependencies]
rectified = [
    "jax",
    ]
