[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pnpflow"
description = "Pytorch library for solving inverse problems with generative models (benchmark flow matching, diffusion)"
authors = [
    {name="Anne Gagneux", email="anne.gagneux@ens-lyon.fr"},
    {name="Ségolène Martin"},
    {name="Paul Hagemann"},
    ]
license = {text = "BSD (3-Clause)"}
dependencies = [
    "deepinv",
    "gdown",
    "lpips",
    "ml_collections",
    "ninja",
    "opencv-python",
    "pytorch-ignite",
    "torch",
    "torchvision",
    "torchdiffeq",
    "torchmetrics",
    "pandas",
    "POT",
    "scikit-image",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pnpflow.__version__"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

[project.optional-dependencies]
rectified = [
    "jax",
    ]
